--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,22 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^17.0.41",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
