--- a/compose.yml
+++ b/compose.yml
@@ -6,8 +6,8 @@ services:
     restart: unless-stopped
     image: mongo
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=username
-      - MONGO_INITDB_ROOT_PASSWORD=password
+      - MONGO_INITDB_ROOT_USERNAME=SignMeOutside
+      - MONGO_INITDB_ROOT_PASSWORD=#FSDFfj3#_33flkj^4lkj
       - MONGO_INITDB_DATABASE=auth
     volumes:
       - ./db/mongo-db:/data/db
@@ -23,15 +23,15 @@ services:
       - "4031:3001"
     environment:
       - NODE_ENV=production
-      - PORT=3001 # MUST match with External port above ^
+      - PORT=3001 # MUST match with Internal port above ^
       - DATABASE_URI=mongo # match with mongo container_name
       - DATABASE_PORT=27017 # match with mongo container
-      - MONGO_USER=username # match with mongo container
-      - MONGO_PASS=password # match with mongo container
+      - MONGO_USER=SignMeOutside # match with mongo container
+      - MONGO_PASS=#FSDFfj3#_33flkj^4lkj # match with mongo container
       - MONGODB_COLLECTION=nodesignCollection
-      - REFRESH_TOKEN_SECRET=secrethash
-      - ACCESS_TOKEN_SECRET=secrethash
-      - FRONTEND_URL_ORIGIN=https://app.mywebsite.com
+      - REFRESH_TOKEN_SECRET=dfasdf23g*gfr*25bs#3vgb*%%643VV43
+      - ACCESS_TOKEN_SECRET=af*78V33F2455&ng@!fbfsdf%45nnbT5!
+      - FRONTEND_URL_ORIGIN=https://nodesignage.williamusic.com
       - FRONTEND_URL_PORT=443 # if using SSL = 443
     depends_on:
       - mongo
@@ -47,8 +47,9 @@ services:
     ports:
       - 4030:80 # because nginx is inside this container too
     environment:
-      - REACT_APP__API_IP=https://app.mywebsite.com
+      - REACT_APP__API_IP=https://nodesignage.williamusic.com
       - REACT_APP__API_PORT=443 # MUST match API external port. use 433 if https://
+      - REACT_APP__API_FOLDER=/api
     depends_on:
       - server
     networks:
