--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,10 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "sass": "^1.53.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4",
